# xautic

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
docs/: .buildinfo  conf.py  index.html  index.rst  requirements-docs.txt  search.html
docs/howto/: examples.rst  guide.html  guide.rst
docs/source/: conf.py  index.rst
docs/source/_templates/: globaltoc.html
docs/source/contents/: apis.rst
src/_xautic/: __init__.py  _version.py  main.py  utils.py
src/xautic/: __init__.py  __main__.py
tests/: test_utils.py
xautic/: __init__.py  _version.py  conf.py  index.rst  main.py  requirements-docs.txt  utils.py
xautic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xautic/_build/doctrees/: environment.pickle  index.doctree
xautic/_build/doctrees/howto/: apis.doctree  examples.doctree  guide.doctree
xautic/_build/html/: genindex.html  objects.inv  searchindex.js
xautic/_build/html/_sources/howto/: examples.rst.txt
xautic/_build/html/howto/: apis.html  examples.html
xautic/howto/: guide.rst
