[build-system]
requires = [
    "setuptools>=58.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = """
(
    ^/tests/
  | ^/xautic/
  | ^/setup[.]py
)
"""
exclude = """
(
    .git
    .mypy_cache
    .tox
    __pycache__
    build
    dist
)
"""
