[metadata]
name = xautic
version = attr: src._xautic.__version__
description = xautic: live reloading with Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/xautic/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.in
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = live-reloading
project_urls =
    Changelog = https://github.com/xames3/xautic
    Source = https://github.com/xames3/xautic
    Tracker = https://github.com/xames3/xautic/issues

[options]
packages =
    _xautic
    xautic
python_requires = >=3.6
package_dir =
    = src
setup_requires =
    setuptools
zip_safe = no

[options.package_data]
_xautic = py.typed
xautic = py.typed

[build_sphinx]
source_dir = docs/en/
build_dir = docs/build
all_files = 1

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
